2010-05-21  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlParser.c:
	[ 3005424 ] Memory leak on error responses

2010-05-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/TestProviders/tests/IndRetryTest.sh:
	[ 2964568 ] Indication stress test

2010-05-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c: 
	[ 3004992 ] Sporadic deadlock on multiple failing indications

2010-05-20  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* instance.c: 
	[ 3004996 ] Typo in instance.c

2010-05-19  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 3004358 ] indCIMXMLHanlder ci can leak on error condition

2010-05-19 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* configure.ac
	[ 3004232 ] configure.ac allows slp-standalone and checks for sfcc

	* README
        [ 3004257 ] slp information in README is not current

2010-05-18 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* tests/slptest/slpTests.sh
	[ 3003508 ] slpTests.sh uses bash-isms

2010-05-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* profileProvider.c, providerMgr.c, default.reg.in:
	[ 3002851 ] SLP needs to register at startup

2010-05-14 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* 10_interop.mof, default.reg.in, indCIMXMLHandler.c, 
	  interopServerProvider.c, test/TestProviders/tests/IndRetryTest.sh:
	[ 2994969 ] Persist failing indications

2010-05-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* internalProvider.c:
	[ 3001879 ] Remove SLP sections from internalProvider

	* httpAdapter.c:
	[ 3001896 ] httpAdapter can crash on bad content length

	[ 3001915 ] Possible heap corruption in httpAdapter
	
2010-05-10 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* Makefile.am, cimslpUtil.h, cimslp.c, cimslp.h,
          cimslpSLP.c, cimslpSLP.h, cimslpCMPI.c, cimslpCMPI.h,
          profileProvider.c, interopProvider.c, sfcBroker.c
	[ 2987170 ] Handle SLP in a provider

2010-05-10  Chris Buccella  <buccella@linux.vnet.ibm.com>
